Adding Guild Quest and adjusting level order

--- a/src/data/levels/✨_Let's play/09_Minekart Madness/chat/es.yml
+++ b/src/data/levels/✨_Let's play/09_Minekart Madness/chat/es.yml
@@ -38,6 +38,8 @@ finish:
   - ¡eres bueno en esto!
   - "<! ROM recibida: 📄  /roms/MinekartMadness.neees"
   - como prometí, puse la ROM en tu directorio 📁  ~/roms~
+  - "<! ROM recibida: 📄  /roms/GuildQuest.neees"
+  - también envié otro juego llamado ~Guild Quest~
   - ¡nos vemos!
   responses:
   - ▶️  continuar [end]
