--- a/src/data/levels/✨_Let's play/12_From Below/chat/en.yml
+++ b/src/data/levels/✨_Let's play/12_From Below/chat/en.yml
@@ -38,6 +38,8 @@ finish:
   - you beat me 😅
   - "<! ROM received: 📄  /roms/FromBelow.neees"
   - as I promised, I put the ROM in your 📁  ~/roms~ directory
+  - "<! ROM received: 📄  /roms/TroubleAt2A03.neees"
+  - I've also sent another game called ~Trouble At 2A03~
   - have fun!
   responses:
   - ▶️  continue [end]
