--- a/src/data/levels/✨_Let's play/12_From Below/chat/es.yml
+++ b/src/data/levels/✨_Let's play/12_From Below/chat/es.yml
@@ -38,6 +38,8 @@ finish:
   - me ganaste 😅
   - "<! ROM recibida: 📄  /roms/FromBelow.neees"
   - como prometí, puse la ROM en tu directorio 📁  ~/roms~
+  - "<! ROM recibida: 📄  /roms/TroubleAt2A03.neees"
+  - también envié otro juego del mismo autor llamado ~Trouble At 2A03~
   - ¡diviértete!
   responses:
   - ▶️  continuar [end]
