--- a/src/data/levels/✨_Let's play/09_Minekart Madness/chat/en.yml
+++ b/src/data/levels/✨_Let's play/09_Minekart Madness/chat/en.yml
@@ -38,6 +38,8 @@ finish:
   - you're good at this!
   - "<! ROM received: 📄  /roms/MinekartMadness.neees"
   - as I promised, I put the ROM in your 📁  ~/roms~ directory
+  - "<! ROM received: 📄  /roms/GuildQuest.neees"
+  - I've also sent another game called ~Guild Quest~
   - see ya!
   responses:
   - ▶️  continue [end]
