Adding emojis to unlockable games

--- a/src/data/levels/✨_Let's play/01_Spacegulls/chat/en.yml
+++ b/src/data/levels/✨_Let's play/01_Spacegulls/chat/en.yml
@@ -69,7 +69,7 @@ finish:
   - "<! ROM received: 📄  /roms/Spacegulls.neees"
   - as I promised, I put a dump of the game in your 📁  ~/roms~ directory
   - "<! ROM received: 📄  /roms/Bobl.neees"
-  - I've also sent another game from the same author called ~Böbl~, check it out!
+  - I've also sent another game from the same author called 💦 🏛️  ~Böbl~, check it out!
   - (if you don't know how to use files, you'll learn soon!)
   responses:
   - ▶️  continue [end]
