--- a/src/data/levels/✨_Let's play/01_Spacegulls/chat/es.yml
+++ b/src/data/levels/✨_Let's play/01_Spacegulls/chat/es.yml
@@ -69,7 +69,7 @@ finish:
   - "<! ROM recibida: 📄 /roms/Spacegulls.neees"
   - como prometí, puse un dump del juego en tu directorio 📁  ~/roms~
   - "<! ROM recibida: 📄 /roms/Bobl.neees"
-  - también envié otro juego del mismo autor llamado ~Böbl~, ¡échale un vistazo!
+  - también envié otro juego del mismo autor llamado 💦 🏛️  ~Böbl~, ¡échale un vistazo!
   - (si no sabes cómo usar archivos, ¡lo aprenderás pronto!)
   responses:
   - ▶️  continuar [end]
