--- a/src/data/levels/✨_Let's play/02_Nalleland/chat/es.yml
+++ b/src/data/levels/✨_Let's play/02_Nalleland/chat/es.yml
@@ -47,7 +47,7 @@ finish:
   - "<! ROM recibida: 📄  /roms/Nalleland.js"
   - como prometí, puse la ROM en tu directorio 📁  ~/roms~
   - "<! ROM recibida: 📄  /roms/Isostasy.js"
-  - también envié otro juego llamado ~Isostasy~
+  - también envié otro juego llamado 🌌 🔫  ~Isostasy~
   - disfruta 😎
   responses:
   - ▶️  continuar [end]
