--- a/src/data/levels/✨_Let's play/03_Jupiter Scope 2/chat/en.yml
+++ b/src/data/levels/✨_Let's play/03_Jupiter Scope 2/chat/en.yml
@@ -45,7 +45,7 @@ finish:
   - "<! ROM received: 📄  /roms/JupiterScope2.neees"
   - as I promised, I put the ROM in your 📁  ~/roms~ directory
   - "<! ROM received: 📄  /roms/StarPowerDemo.neees"
-  - I've also sent another game called ~Star Power Demo~
+  - I've also sent another game called 🧚 🧹  ~Star Power Demo~
   - happy shooting 💣
   responses:
   - ▶️  continue [end]
