--- a/src/data/levels/✨_Let's play/03_Jupiter Scope 2/chat/es.yml
+++ b/src/data/levels/✨_Let's play/03_Jupiter Scope 2/chat/es.yml
@@ -45,7 +45,7 @@ finish:
   - "<! ROM recibida: 📄  /roms/JupiterScope2.neees"
   - como prometí, puse la ROM en tu directorio 📁  ~/roms~
   - "<! ROM recibida: 📄  /roms/StarPowerDemo.neees"
-  - también envié otro juego llamado ~Isostasy~
+  - también envié otro juego llamado 🧚 🧹  ~Star Power Demo~
   - disfruta disparando 💣
   responses:
   - ▶️  continuar [end]
