--- a/src/data/levels/✨_Let's play/04_Raven's Gate/chat/en.yml
+++ b/src/data/levels/✨_Let's play/04_Raven's Gate/chat/en.yml
@@ -39,7 +39,7 @@ finish:
   - "<! ROM received: 📄  /roms/RavensGate.neees"
   - as I promised, I put the ROM in your 📁  ~/roms~ directory
   - "<! ROM received: 📄  /roms/Crowborg.neees"
-  - I've also sent another game called ~Crowborg~
+  - I've also sent another game called 🦅 🧷  ~Crowborg~
   - congratulations 🙃
   responses:
   - ▶️  continue [end]
