--- a/src/data/levels/✨_Let's play/04_Raven's Gate/chat/es.yml
+++ b/src/data/levels/✨_Let's play/04_Raven's Gate/chat/es.yml
@@ -39,7 +39,7 @@ finish:
   - "<! ROM recibida: 📄  /roms/RavensGate.neees"
   - como prometí, puse la ROM en tu directorio 📁  ~/roms~
   - "<! ROM recibida: 📄  /roms/Crowborg.neees"
-  - también envié otro juego llamado ~Crowborg~
+  - también envié otro juego llamado 🦅 🧷  ~Crowborg~
   - felicitaciones 🙃
   responses:
   - ▶️  continuar [end]
