--- a/src/data/levels/✨_Let's play/05_Dizzy Sheep Disaster/chat/es.yml
+++ b/src/data/levels/✨_Let's play/05_Dizzy Sheep Disaster/chat/es.yml
@@ -38,7 +38,7 @@ finish:
   - "<! ROM recibida: 📄  /roms/DizzySheepDisaster.neees"
   - como prometí, puse la ROM en tu directorio 📁  ~/roms~
   - "<! ROM recibida: 📄  /roms/DreamDogDilemma.neees"
-  - también envié otro juego del mismo autor llamado ~Dream Dog Dilemma~
+  - también envié otro juego del mismo autor llamado 💤 🐶  ~Dream Dog Dilemma~
   - ¡diviértete!
   responses:
   - ▶️  continuar [end]
