--- a/src/data/levels/✨_Let's play/07_Super Tilt Bro/chat/es.yml
+++ b/src/data/levels/✨_Let's play/07_Super Tilt Bro/chat/es.yml
@@ -47,7 +47,7 @@ finish:
   - "<! ROM recibida: 📄  /roms/SuperTiltBro.neees"
   - como prometí, puse la ROM en tu directorio 📁  ~/roms~
   - "<! ROM recibida: 📄  /roms/Wolfling.neees"
-  - también envié otro juego llamado ~Wolfling~
+  - también envié otro juego llamado 🐺 ⛓️  ~Wolfling~
   - sigue luchando 💪
   responses:
   - ▶️  continuar [end]
