--- a/src/data/levels/✨_Let's play/08_Wolf Spirit/chat/es.yml
+++ b/src/data/levels/✨_Let's play/08_Wolf Spirit/chat/es.yml
@@ -41,7 +41,7 @@ finish:
   - "<! ROM recibida: 📄  /roms/WolfSpirit.neees"
   - como prometí, puse la ROM en tu directorio 📁  ~/roms~
   - "<! ROM recibida: 📄  /roms/FilthyKitchen.neees"
-  - también envié otro juego llamado ~Filthy Kitchen~
+  - también envié otro juego llamado 🦟 🍳  ~Filthy Kitchen~
   - ¡diviértete!
   responses:
   - ▶️  continuar [end]
