--- a/src/data/levels/✨_Let's play/09_Minekart Madness/chat/en.yml
+++ b/src/data/levels/✨_Let's play/09_Minekart Madness/chat/en.yml
@@ -39,7 +39,7 @@ finish:
   - "<! ROM received: 📄  /roms/MinekartMadness.neees"
   - as I promised, I put the ROM in your 📁  ~/roms~ directory
   - "<! ROM received: 📄  /roms/GuildQuest.neees"
-  - I've also sent another game called ~Guild Quest~
+  - I've also sent another game called 🧙 ⚔️  ~Guild Quest~
   - see ya!
   responses:
   - ▶️  continue [end]
