--- a/src/data/levels/✨_Let's play/11_Falling/chat/es.yml
+++ b/src/data/levels/✨_Let's play/11_Falling/chat/es.yml
@@ -41,7 +41,7 @@ finish:
   - "<! ROM recibida: 📄  /roms/Falling.neees"
   - como prometí, puse la ROM en tu directorio 📁  ~/roms~
   - "<! ROM recibida: 📄  /roms/Thwaite.neees"
-  - también envié otro juego del mismo autor llamado ~Thwaite~
+  - también envié otro juego del mismo autor llamado 🌳 🏠  ~Thwaite~
   - ¡chau por ahora!
   responses:
   - ▶️  continuar [end]
