--- a/src/data/levels/✨_Let's play/12_From Below/chat/es.yml
+++ b/src/data/levels/✨_Let's play/12_From Below/chat/es.yml
@@ -39,7 +39,7 @@ finish:
   - "<! ROM recibida: 📄  /roms/FromBelow.neees"
   - como prometí, puse la ROM en tu directorio 📁  ~/roms~
   - "<! ROM recibida: 📄  /roms/TroubleAt2A03.neees"
-  - también envié otro juego del mismo autor llamado ~Trouble At 2A03~
+  - también envié otro juego del mismo autor llamado 🏭 🔩  ~Trouble At 2A03~
   - ¡diviértete!
   responses:
   - ▶️  continuar [end]
