--- a/src/data/levels/✨_Let's play/14_Tesla Vs Edison/chat/es.yml
+++ b/src/data/levels/✨_Let's play/14_Tesla Vs Edison/chat/es.yml
@@ -40,7 +40,7 @@ finish:
   - "<! ROM recibida: 📄  /roms/TeslaVsEdison.neees"
   - como prometí, puse la ROM en tu directorio 📁  ~/roms~
   - "<! ROM recibida: 📄  /roms/MissingLands.neees"
-  - también envié otro juego llamado ~Missing Lands~
+  - también envié otro juego llamado 🐸 🌍  ~Missing Lands~
   - ¡nos vemos!
   responses:
   - ▶️  continuar [end]
