--- a/src/data/levels/✨_Let's play/02_Nalleland/chat/en.yml
+++ b/src/data/levels/✨_Let's play/02_Nalleland/chat/en.yml
@@ -47,7 +47,7 @@ finish:
   - "<! ROM received: 📄  /roms/Nalleland.neees"
   - as I promised, I put the ROM in your 📁  ~/roms~ directory
   - "<! ROM received: 📄  /roms/Isostasy.neees"
-  - I've also sent another game called ~Isostasy~
+  - I've also sent another game called 🌌 🔫  ~Isostasy~
   - enjoy 😎
   responses:
   - ▶️  continue [end]
