--- a/src/data/levels/✨_Let's play/05_Dizzy Sheep Disaster/chat/en.yml
+++ b/src/data/levels/✨_Let's play/05_Dizzy Sheep Disaster/chat/en.yml
@@ -38,7 +38,7 @@ finish:
   - "<! ROM received: 📄  /roms/DizzySheepDisaster.neees"
   - as I promised, I put the ROM in your 📁  ~/roms~ directory
   - "<! ROM received: 📄  /roms/DreamDogDilemma.neees"
-  - I've also sent another game from the same author called ~Dream Dog Dilemma~
+  - I've also sent another game from the same author called 💤 🐶  ~Dream Dog Dilemma~
   - have fun!
   responses:
   - ▶️  continue [end]
