--- a/src/data/levels/✨_Let's play/06_Heist/chat/en.yml
+++ b/src/data/levels/✨_Let's play/06_Heist/chat/en.yml
@@ -41,7 +41,7 @@ finish:
   - "<! ROM received: 📄  /roms/Heist.neees"
   - as I promised, I put the ROM in your 📁  ~/roms~ directory
   - "<! ROM received: 📄  /roms/ConcentrationRoom.neees"
-  - I've also sent another game called ~Concentration Room~
+  - I've also sent another game called 🍒 🃏  ~Concentration Room~
   - bye!
   responses:
   - ▶️  continue [end]
