--- a/src/data/levels/✨_Let's play/07_Super Tilt Bro/chat/en.yml
+++ b/src/data/levels/✨_Let's play/07_Super Tilt Bro/chat/en.yml
@@ -47,7 +47,7 @@ finish:
   - "<! ROM received: 📄  /roms/SuperTiltBro.neees"
   - as I promised, I put the ROM in your 📁  ~/roms~ directory
   - "<! ROM received: 📄  /roms/Wolfling.neees"
-  - I've also sent another game called ~Wolfling~
+  - I've also sent another game called 🐺 ⛓️  ~Wolfling~
   - keep fighting 💪
   responses:
   - ▶️  continue [end]
