--- a/src/data/levels/✨_Let's play/08_Wolf Spirit/chat/en.yml
+++ b/src/data/levels/✨_Let's play/08_Wolf Spirit/chat/en.yml
@@ -41,7 +41,7 @@ finish:
   - "<! ROM received: 📄  /roms/WolfSpirit.neees"
   - as I promised, I put the ROM in your 📁  ~/roms~ directory
   - "<! ROM received: 📄  /roms/FilthyKitchen.neees"
-  - I've also sent another game called ~Filthy Kitchen~
+  - I've also sent another game called 🦟 🍳  ~Filthy Kitchen~
   - have fun!
   responses:
   - ▶️  continue [end]
