--- a/src/data/levels/✨_Let's play/10_Feline Flood Fiasco/chat/es.yml
+++ b/src/data/levels/✨_Let's play/10_Feline Flood Fiasco/chat/es.yml
@@ -38,7 +38,7 @@ finish:
   - "<! ROM recibida: 📄  /roms/FelineFloodFiasco.neees"
   - como prometí, puse la ROM en tu directorio 📁  ~/roms~
   - "<! ROM recibida: 📄  /roms/FluffySpaceEscape.neees"
-  - también envié otro juego del mismo autor llamado ~Fluffy Space Escape~
+  - también envié otro juego del mismo autor llamado 🐰 🛰️  ~Fluffy Space Escape~
   - ¡feliz rompecabezas!
   responses:
   - ▶️  continuar [end]
