--- a/src/data/levels/✨_Let's play/11_Falling/chat/en.yml
+++ b/src/data/levels/✨_Let's play/11_Falling/chat/en.yml
@@ -41,7 +41,7 @@ finish:
   - "<! ROM received: 📄  /roms/Falling.neees"
   - as I promised, I put the ROM in your 📁  ~/roms~ directory
   - "<! ROM received: 📄  /roms/Thwaite.neees"
-  - I've also sent another game called ~Thwaite~
+  - I've also sent another game called 🌳 🏠  ~Thwaite~
   - bye for now!
   responses:
   - ▶️  continue [end]
