--- a/src/data/levels/✨_Let's play/12_From Below/chat/en.yml
+++ b/src/data/levels/✨_Let's play/12_From Below/chat/en.yml
@@ -39,7 +39,7 @@ finish:
   - "<! ROM received: 📄  /roms/FromBelow.neees"
   - as I promised, I put the ROM in your 📁  ~/roms~ directory
   - "<! ROM received: 📄  /roms/TroubleAt2A03.neees"
-  - I've also sent another game called ~Trouble At 2A03~
+  - I've also sent another game called 🏭 🔩  ~Trouble At 2A03~
   - have fun!
   responses:
   - ▶️  continue [end]
