--- a/src/data/levels/✨_Let's play/14_Tesla Vs Edison/chat/en.yml
+++ b/src/data/levels/✨_Let's play/14_Tesla Vs Edison/chat/en.yml
@@ -40,7 +40,7 @@ finish:
   - "<! ROM received: 📄  /roms/TeslaVsEdison.neees"
   - as I promised, I put the ROM in your 📁  ~/roms~ directory
   - "<! ROM received: 📄  /roms/MissingLands.neees"
-  - I've also sent another game called ~Missing Lands~
+  - I've also sent another game called 🐸 🌍  ~Missing Lands~
   - later!
   responses:
   - ▶️  continue [end]
