--- a/src/data/levels/03_Cartridge/01_Using JS modules/chat/en.yml
+++ b/src/data/levels/03_Cartridge/01_Using JS modules/chat/en.yml
@@ -77,3 +77,10 @@ modules:
       ```javascript import SomeClass from "./relative/path/to/SomeClass"```
   responses:
   - ...exercise
+
+corollary:
+  messages:
+  - from now on, you can see your changes with the `diff` command
+  - if you need to undo your changes, run the `restore` command
+  responses:
+  - ▶️  continue [end]
