FIX: Linter errors in custom tests

--- a/package.json
+++ b/package.json
@@ -94,6 +94,18 @@
           "no-eval": "off",
           "no-control-regex": "off"
         }
+      },
+      {
+        "files": ["**/*.test.js"],
+        "globals": {
+          "before": "readonly",
+          "beforeEach": "readonly",
+          "afterEach": "readonly",
+          "after": "readonly",
+          "it": "readonly",
+          "$": "readonly",
+          "expect": "readonly"
+        }
       }
     ]
   },
