--- a/src/data/levels/05b_PPU/02_Frame buffer/chat/en.yml
+++ b/src/data/levels/05b_PPU/02_Frame buffer/chat/en.yml
@@ -5,9 +5,9 @@ main:
   messages:
   - we'll store our image data in something called frame buffer
   - it's basically a big array with the color of each pixel
-  - each element is a 32-bit number __$aabbggrr__
-  - "\"aa\" represents the opacity (in our NEEES it's always $FF)"
-  - "\"bb\", \"gg\" and \"rr\" represent the amount of <blue>, <green> and <red>"
+  - each element is a 32-bit number __$AABBGGRR__
+  - "\"AA\" represents the opacity (in our NEEES it's always $FF)"
+  - "\"BB\", \"GG\" and \"RR\" represent the amount of <blue>, <green> and <red>"
   responses:
   - (*) can you give me some color examples? [examples]
   - I want to draw something on the screen! 🖌️ [integrate]
