--- a/src/data/levels/05b_PPU/02_Frame buffer/chat/es.yml
+++ b/src/data/levels/05b_PPU/02_Frame buffer/chat/es.yml
@@ -5,9 +5,9 @@ main:
   messages:
   - almacenaremos nuestros datos de imagen en algo llamado frame buffer
   - es básicamente una gran matriz con el color de cada píxel
-  - cada elemento es un número de 32 bits __$aabbggrr__
-  - "\"aa\" representa la opacidad (en nuestra NEEES siempre es $FF)"
-  - "\"bb\", \"gg\" and \"rr\" representan la cantidad de <azul>, <verde> y <rojo>"
+  - cada elemento es un número de 32 bits __$AABBGGRR__
+  - "\"AA\" representa la opacidad (en nuestra NEEES siempre es $FF)"
+  - "\"BB\", \"GG\" and \"RR\" representan la cantidad de <azul>, <verde> y <rojo>"
   responses:
   - (*) ¿puedes darme algunos ejemplos de colores? [examples]
   - ¡quiero dibujar algo en la pantalla! 🖌️ [integrate]
