Converting tests to spaces instead of tabs

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -20,6 +20,12 @@
 			"options": {
 				"useTabs": false
 			}
+		},
+		{
+			"files": ["src/data/levels/$tests/*.js"],
+			"options": {
+				"useTabs": false
+			}
 		}
 	],
 	"arrowParens": "always",
